--- a/style.css
+++ b/style.css
@@ -1,17 +1,12 @@
-/* Moest er in van Mark, idk wat het doet */
-* {
-  padding: 0px;
-  margin: 0px;
-}
-
-/* Dit stukje code zorgt voor de schaduw rondom de (idk hoe je dat noemt lol) */
-header, nav, #important, #populair {
-  box-shadow: 7px 7px rgba(0, 0, 0, 0.5);
+/* Dit stukje code zorgt voor de schaduw en doorzichtigheid van de frames */
+header, nav, footer, #important, #populair {
+  /* box-shadow: 7px 7px rgba(0, 0, 0, 0.5); */
+  opacity: 0.8;
 }
 
 body {
   padding-top: 12px;
-  background-size: 100% 100%;
+  background-size: auto;
   background-attachment: fixed;
 }
 
@@ -33,7 +28,13 @@ nav {
   background-color: #143a77;
 }
 
-/* Dit is de CSS voor die mooie navigatie knoppen boven aan de pagina*/
+footer {
+  width: 100%;
+  height: 75px;
+  background-color: purple;
+}
+
+/* Dit is de CSS voor die mooie navigatie knoppen (Copyright Dennis ten Hoove.inc 2017 :P) boven aan de pagina*/
 .nav_button {
 	text-align: center;
 	border: none;
