--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@ body {
   background-attachment: fixed;
 }
 
+nav {
+  text-align: center;
+}
+
 /* Dit is voor de <div> waar alle andere <div>s zich in bevinden */
 #main {
   width: 80%;
   height: 100%;
+  margin: auto;
 }
 
 header {
