--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,5 @@
-/* Dit stukje code zorgt voor de schaduw en doorzichtigheid van de frames - Momenteel gedeeltelijk uitgeschakeld */
+/* Dit stukje code zorgt voor de doorzichtigheid van de frames */
 header, footer, #important, #populair {
-  /* box-shadow: 7px 7px rgba(0, 0, 0, 0.5); */
   opacity: 0.4;
 }
 
@@ -38,27 +37,6 @@ footer {
   width: 100%;
   height: 75px;
   background-color: #528ae5;
-}
-
-/* Dit is de CSS voor die mooie navigatie knoppen (Copyright Dennis ten Hoove.inc 2017 :P) boven aan de pagina*/
-.nav_button {
-	text-align: center;
-	border: none;
-	display: inline-block;
-	cursor: pointer;
-	color: #ffffff;
-	font-size: 15px;
-	padding: 10px 10px;
-	text-shadow: 0px 1px 0px #b23e35;
-	width: 12.3%;
-  height: 20px;
-}
-
-/* Dit is voor een kleine animatie bij hoover op de navigatie knoppen */
-.nav_button:hover {
-  transition: 0.5s;
-  background-color: #528ae5;
-	opacity: 1;
 }
 
  #important {
