--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 /* Dit stukje code zorgt voor de doorzichtigheid van de frames */
 header, footer, #important, #populair {
-  opacity: 0.4;
+
 }
 
 body {
@@ -24,29 +24,29 @@ nav {
 header {
   width: 100%;
   height: 75px;
-  background-color: #528ae5;
+  background-color: rgba(83, 139, 230, 0.6);
 }
 
 nav {
   width: 100%;
   height: 40px;
-  background-color: #143a77;
+  background-color: rgba(20, 58, 119, 0.6);
 }
 
 footer {
   width: 100%;
   height: 75px;
-  background-color: #528ae5;
+  background-color: rgba(83, 139, 230, 0.6);
 }
 
  #important {
    width: 100%;
    height: 400px;
-   background-color: #528ae5;
+   background-color: rgba(83, 139, 230, 0.6);
  }
 
  #populair {
    width: 100%;
    height: 450px;
-   background-color: #528ae5;
+   background-color: rgba(83, 139, 230, 0.6);
  }
