--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,8 @@
-/* Dit stukje code zorgt voor de doorzichtigheid van de frames */
-header, footer, #important, #populair {
-
+/* Dit stukje code doet het volgende op ALLES */
+* {
+  color: #ffffff; /* Dit is text color */
+  text-shadow: 0px 1px 0px #b23e35;
+  font-size: 16px;
 }
 
 body {
@@ -24,7 +26,7 @@ nav {
 header {
   width: 100%;
   height: 75px;
-  background-color: rgba(83, 139, 230, 0.6);
+  background-color: rgba(83, 139, 230, 0.6); /* Gewoon een note: Hier wordt de Opacity gedaan */
 }
 
 nav {
