--- a/stylesheets/style_important.css
+++ b/stylesheets/style_important.css
@@ -1,4 +1,4 @@
-#important_Content_1, #important_Content_2, #important_Content_3, #important_Content_4, #important_Content_5, #important_Content_6 {
+#important_Content_1, #important_Content_2, #important_Content_3, #important_Content_4, #important_Content_5, #important_Content_6, #important_Content_7, #important_Content_8 {
   height: 100%;
   width: 49%;
   background-color: rgba(125, 205, 136, 0.5);
@@ -7,16 +7,44 @@
   margin: 3px;
 }
 
-#container_1, #container_2, #container_3 {
+#populair_Content_1, #populair_Content_2, #populair_Content_3, #populair_Content_4, #populair_Content_5, #populair_Content_6, #populair_Content_7, #populair_Content_8 {
+  height: 100%;
+  width: 49%;
+  background-color: rgba(125, 205, 136, 0.5);
+  border-radius: 5px;
+  border-style: ridge;
+  margin: 3px;
+}
+
+#container_1, #container_2, #container_3, #container_4, #container_5, #container_6 {
   width: 100%;
   height: 110px;
 }
 
-#important_Content_1, #important_Content_3, #important_Content_5 {
+#important_Content_1, #important_Content_3, #important_Content_5, #important_Content_7 {
   float: left;
-  margin-right: 0px;
 }
 
-#important_Content_2, #important_Content_4, #important_Content_6 {
+#important_Content_2, #important_Content_4, #important_Content_6, #important_Content_8 {
   float: right;
 }
+
+#populair_Content_1, #populair_Content_3, #populair_Content_5, #populair_Content_7 {
+  float: left;
+}
+
+#populair_Content_2, #populair_Content_4, #populair_Content_6, #populair_Content_8 {
+  float: right;
+}
+
+ #important {
+   width: 100%;
+   height: 366px;
+   background-color: rgba(83, 139, 230, 0.6);
+ }
+
+ #populair {
+   width: 100%;
+   height: 366px;
+   background-color: rgba(83, 139, 230, 0.6);
+ }
