--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9,7 +9,7 @@ body {
   padding-top: 12px;
   background-size: auto;
   background-attachment: fixed;
-  min-width: 1200px;
+  min-width: 800px;
 }
 
 nav {
@@ -26,18 +26,21 @@ nav {
 
 header {
   width: 100%;
+  border-radius: 5px 5px 0px 0px;
   height: 75px;
   background-color: rgba(83, 139, 230, 0.6); /* Gewoon een note: Hier wordt de Opacity van de frames gedaan */
 }
 
 nav {
   width: 100%;
+  border-radius: 0px 0px 5px 5px;
   height: 40px;
   background-color: rgba(20, 58, 119, 0.6);
 }
 
 footer {
   width: 100%;
+  border-radius: 5px;
   height: 75px;
   background-color: rgba(83, 139, 230, 0.6);
 }
