--- a/stylesheets/style_important.css
+++ b/stylesheets/style_important.css
@@ -1,6 +1,6 @@
 #important_Content_1, #important_Content_2, #important_Content_3, #important_Content_4, #important_Content_5, #important_Content_6, #important_Content_7, #important_Content_8 {
   height: 100%;
-  width: 49%;
+  width: 48.5%;
   background-color: rgba(125, 205, 136, 0.5);
   border-radius: 5px;
   border-style: ridge;
@@ -9,7 +9,7 @@
 
 #populair_Content_1, #populair_Content_2, #populair_Content_3, #populair_Content_4, #populair_Content_5, #populair_Content_6, #populair_Content_7, #populair_Content_8 {
   height: 100%;
-  width: 49%;
+  width: 48.5%;
   background-color: rgba(125, 205, 136, 0.5);
   border-radius: 5px;
   border-style: ridge;
@@ -41,10 +41,12 @@
    width: 100%;
    height: 366px;
    background-color: rgba(83, 139, 230, 0.6);
+   border-radius: 5px;
  }
 
  #populair {
    width: 100%;
+   border-radius: 5px;
    height: 366px;
    background-color: rgba(83, 139, 230, 0.6);
  }
