--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,7 +17,7 @@ nav {
   opacity: 0.8;
 }
 
-/* Dit is voor de <div> waar alle andere <div>s zich in bevinden */
+/* Dit is voor de <div> waar alle andere <div>s zich in bevinden, ik weet dat ik hem een kut naam heb gegeven. */
 #hoofd {
   width: 80%;
   height: auto;
@@ -31,6 +31,7 @@ header {
   background-color: rgba(83, 139, 230, 0.6); /* Gewoon een note: Hier wordt de Opacity van de frames gedaan */
 }
 
+/* Dit is de CSS voor het mooie navigatie lint met die knoppen  */
 nav {
   width: 100%;
   border-radius: 0px 0px 5px 5px;
