--- a/stylesheets/style_important.css
+++ b/stylesheets/style_important.css
@@ -1,3 +1,6 @@
+/* Dit .CSS bestand wordt gebruikt voor die mooie Important en Populair content-boxes (divs). Ook worden de attributen
+van de Containers (Dat blauwe spul achter de groene content-boxes) gedaan. */
+
 #important_Content_1, #important_Content_2, #important_Content_3, #important_Content_4, #important_Content_5, #important_Content_6, #important_Content_7, #important_Content_8 {
   height: 100%;
   width: 48.5%;
