--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,7 @@
 /* Dit stukje code doet het volgende op ALLES */
 * {
   color: #ffffff; /* Dit is text color */
-  text-shadow: 0px 1px 0px #b23e35;
+  text-shadow: 0px 1px 0px #b23e35; /* Deze text shadow AUB zo later, het zorgt er voor dat de text zn eigen "look" krijgt en helpt met de leesbaarheid */
   font-size: 16px;
 }
 
@@ -12,6 +12,7 @@ body {
   min-width: 800px;
 }
 
+/* Centreer de text in het navigatie lint en maak het lint opaque (Dat betekend doorzichtig) */
 nav {
   text-align: center;
   opacity: 0.8;
@@ -46,6 +47,7 @@ footer {
   background-color: rgba(83, 139, 230, 0.6);
 }
 
+/* Dit is voor de iframe waar de pagina's in worden geladen - Meaning it's important, afblijven please. */
 #main {
   width: 100%;
   height: 800px;
@@ -53,6 +55,7 @@ footer {
   padding-top: 25px;
 }
 
+/* Dit verwijdert de scrollbar van de main pagina - maar je kan nog wel scrollen dus geen zorgen */
 ::-webkit-scrollbar {
     display: none;
 }
