--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,6 +47,7 @@ footer {
   background-color: rgba(83, 139, 230, 0.6);
 }
 
+
 /* Dit is voor de iframe waar de pagina's in worden geladen - Meaning it's important, afblijven please. */
 #main {
   width: 100%;
@@ -55,7 +56,7 @@ footer {
   padding-top: 25px;
 }
 
-/* Dit verwijdert de scrollbar van de main pagina - maar je kan nog wel scrollen dus geen zorgen */
+/* Dit verwijdert de scrollbar van de main pagina (In Google Chrome) - maar je kan nog wel scrollen dus geen zorgen */
 ::-webkit-scrollbar {
     display: none;
 }
