--- a/forum/post.css
+++ b/forum/post.css
@@ -5,6 +5,14 @@
   border-radius: 5px;
   border-style: ridge;
   margin: auto;
+
+}
+
+a.fill-Content_1 {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
 }
 
 .forum_irl {
