--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-/* Dit stukje code doet het volgende op ALLES */
 * {
-  color: #ffffff; /* Dit is text color */
-  text-shadow: 0px 1px 0px #b23e35; /* Deze text shadow AUB zo later, het zorgt er voor dat de text zn eigen "look" krijgt en helpt met de leesbaarheid */
+  color: black; /* Dit is text color */
+    /*text-shadow: 0px 1px 0px #b23e35; /* Deze text shadow AUB zo later, het zorgt er voor dat de text zn eigen "look" krijgt en helpt met de leesbaarheid */
   font-size: 16px;
 }
 
@@ -12,13 +11,11 @@ body {
   min-width: 800px;
 }
 
-/* Centreer de text in het navigatie lint en maak het lint opaque (Dat betekend doorzichtig) */
 nav {
   text-align: center;
   opacity: 0.8;
 }
 
-/* Dit is voor de <div> waar alle andere <div>s zich in bevinden, ik weet dat ik hem een kut naam heb gegeven. */
 #hoofd {
   width: 80%;
   height: auto;
@@ -29,10 +26,9 @@ header {
   width: 100%;
   border-radius: 5px 5px 0px 0px;
   height: 75px;
-  background-color: rgba(83, 139, 230, 0.6); /* Gewoon een note: Hier wordt de Opacity van de frames gedaan */
+  background-color: rgba(83, 139, 230, 0.6);
 }
 
-/* Dit is de CSS voor het mooie navigatie lint met die knoppen  */
 nav {
   width: 100%;
   border-radius: 0px 0px 5px 5px;
